# tauri-clipboard

./: README.md  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: ClipboardList.svelte
